--- a/index.html
+++ b/index.html
@@ -41,13 +41,13 @@
               <img src="./FRIENDS/ODG.gif" height="250">
               <img src="./FRIENDS/Hi.webp" height="250">
               <img src="./FRIENDS/How.gif" height="250">
-<!--       <div>
+        <div>
         <h2>Funny Quotes</h2>
-      </div>
-        <p>
-          <!-- <img src="./FRIENDS/" --> -->
-      <div>
-        <img id= "2000" onload="hide()" src="./FRIENDS/Ohmygod.webp" height= "400">
-        <button onclick= "show()">CLICK ME!</button>
+        </div>
+            <p>
+          <img src="./FRIENDS/Pivot.gif" height="250">
+        <div>
+            <img id= "2000" onload="hide()" src="./FRIENDS/Ohmygod.webp" height= "400">
+            <button onclick= "show()">CLICK ME!</button>
       </body>
       </html>
